--- a/TriangularLake/app/src/main/res/layout/region_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/region_layout.xml
@@ -8,143 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ListView
+            android:id="@+id/regions_layout_list_view"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp" />
 
-            <RelativeLayout
-                android:id="@+id/region_layout_lietlahti_rl"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="@drawable/lietlahti">
-
-                <TextView
-                    android:id="@+id/lietlahti_area_tv"
-                    android:textColor="@color/text_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/area"
-                    android:gravity="center"
-                    android:layout_above="@+id/lietlahti_name_tv"/>
-
-                <TextView
-                    android:id="@+id/lietlahti_name_tv"
-                    android:textColor="@color/text_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="LIETLAHTI" />
-
-                <ImageView
-                    android:id="@+id/lietlahti_line_image"
-                    android:layout_width="100sp"
-                    android:layout_height="3dp"
-                    android:background="@color/text_main"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/lietlahti_name_tv"/>
-
-                <ImageView
-                    android:id="@+id/lietlahti_circle_image"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/region_circle"
-                    android:layout_below="@+id/lietlahti_line_image"
-                    android:layout_alignBottom="@+id/lietlahti_sectors_tv"
-                    android:layout_alignLeft="@+id/lietlahti_line_image"
-                    android:layout_alignStart="@+id/lietlahti_line_image" />
-
-                <TextView
-                    android:id="@+id/lietlahti_quantity_sectors_tv"
-                    android:layout_width="100dp"
-                    android:layout_height="18dp"
-                    android:textColor="@color/text_main"
-                    android:text="6"
-                    android:textSize="15sp"
-                    android:layout_below="@+id/lietlahti_line_image"
-                    android:layout_toRightOf="@+id/lietlahti_circle_image"/>
-
-                <TextView
-                    android:id="@+id/lietlahti_sectors_tv"
-                    android:layout_width="100dp"
-                    android:layout_height="18dp"
-                    android:textColor="@color/text_main"
-                    android:text="@string/sector"
-                    android:textSize="15sp"
-                    android:layout_below="@+id/lietlahti_quantity_sectors_tv"
-                    android:layout_toRightOf="@+id/lietlahti_circle_image"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/region_layout_triangular_rl"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:background="@drawable/triangular">
-
-                <TextView
-                    android:id="@+id/triangular_area_tv"
-                    android:textColor="@color/text_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/area"
-                    android:gravity="center"
-                    android:layout_above="@+id/triangular_name_tv"/>
-
-                <TextView
-                    android:id="@+id/triangular_name_tv"
-                    android:textColor="@color/text_main"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="TRIANGULAR" />
-
-                <ImageView
-                    android:id="@+id/triangular_line_image"
-                    android:layout_width="100sp"
-                    android:layout_height="3dp"
-                    android:background="@color/text_main"
-                    android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/triangular_name_tv"/>
-
-                <ImageView
-                    android:id="@+id/triangular_circle_image"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/region_circle"
-                    android:layout_below="@+id/triangular_line_image"
-                    android:layout_alignBottom="@+id/triangular_sectors_tv"
-                    android:layout_alignLeft="@+id/triangular_line_image"
-                    android:layout_alignStart="@+id/triangular_line_image" />
-
-                <TextView
-                    android:id="@+id/triangular_quantity_sectors_tv"
-                    android:layout_width="100dp"
-                    android:layout_height="18dp"
-                    android:textColor="@color/text_main"
-                    android:text="6"
-                    android:textSize="15sp"
-                    android:layout_below="@+id/triangular_line_image"
-                    android:layout_toRightOf="@+id/triangular_circle_image"/>
-
-                <TextView
-                    android:id="@+id/triangular_sectors_tv"
-                    android:layout_width="100dp"
-                    android:layout_height="18dp"
-                    android:textColor="@color/text_main"
-                    android:text="@string/sector"
-                    android:textSize="15sp"
-                    android:layout_below="@+id/triangular_quantity_sectors_tv"
-                    android:layout_toRightOf="@+id/triangular_circle_image"/>
-
-            </RelativeLayout>
-        </LinearLayout>
     </ScrollView>
 </LinearLayout>
