--- a/TriangularLake/app/src/main/res/layout/region_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/region_layout.xml
@@ -4,16 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ScrollView
+
+    <ListView
+        android:id="@+id/regions_layout_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" />
 
-        <ListView
-            android:id="@+id/regions_layout_list_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp" />
-
-    </ScrollView>
 </LinearLayout>
