--- a/TriangularLake/app/src/main/res/layout/regions_list_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/regions_list_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/regions_list_region_photo"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -16,12 +16,13 @@
         android:id="@+id/regions_list_area"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/regions_list_name"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:gravity="center"
         android:text="@string/area"
-        android:textColor="@color/text_main" />
+        android:textColor="@color/text_main"
+        android:layout_marginTop="103dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/regions_list_name"
@@ -30,7 +31,7 @@
         android:gravity="center"
         android:textColor="@color/text_main"
         android:textSize="20sp"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/regions_list_area"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
