--- a/TriangularLake/app/src/main/res/layout/sectors_list_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sectors_list_layout.xml
@@ -7,22 +7,19 @@
     <ImageView
         android:id="@+id/sectors_list_sector_photo"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
+        android:layout_height="260dp"/>
 
     <TextView
         android:id="@+id/sectors_list_sector_label"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
         android:text="@string/sector_upper"
         android:textColor="@color/text_main"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        android:layout_alignBottom="@+id/sectors_list_sector_photo"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="80dp" />
 
     <TextView
         android:id="@+id/sectors_list_sector_name"
@@ -38,12 +35,10 @@
         android:id="@+id/sectors_list_line_image"
         android:layout_width="50sp"
         android:layout_height="3dp"
+        android:background="@color/text_main"
+        android:layout_below="@+id/sectors_list_sector_name"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/sectors_list_sector_label"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/text_main" />
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/sectors_list_route_image"
