--- a/TriangularLake/app/src/main/res/layout/fragment_sector_boulder.xml
+++ b/TriangularLake/app/src/main/res/layout/fragment_sector_boulder.xml
@@ -8,11 +8,13 @@
         android:id="@+id/fragment_sector_boulder_photo"
         android:layout_width="match_parent"
         android:layout_height="260dp"
-        android:src="@drawable/triangular"/>
+        android:src="@drawable/triangular" />
 
-    <!--<ListView-->
-        <!--android:id="@+id/fragment_sector_boulder_problem_list"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content" />-->
+    <ListView
+        android:id="@+id/fragment_sector_boulder_problem_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/fragment_sector_boulder_photo"
+        android:descendantFocusability="beforeDescendants" />
 
 </RelativeLayout>
