--- a/TriangularLake/app/src/main/res/layout/sector_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sector_layout.xml
@@ -1,117 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
 
-    <RelativeLayout
+    <ScrollView
+        android:id="@+id/sector_layout_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/sector_layout_sector_photo"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/sector_layout_sector_label"
-            android:layout_width="100dp"
-            android:layout_height="30sp"
-            android:layout_marginLeft="74dp"
-            android:layout_marginStart="74dp"
-            android:layout_marginTop="97dp"
-            android:text="@string/sector"
-            android:textColor="@color/text_main"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/sector_layout_sector_name"
-            android:layout_width="wrap_content"
-            android:layout_height="30sp"
-            android:layout_alignTop="@+id/sector_layout_sector_label"
-            android:layout_toEndOf="@+id/sector_layout_sector_label"
-            android:layout_toRightOf="@+id/sector_layout_sector_label"
-            android:textColor="@color/text_main"
-            android:textSize="23sp" />
-
-        <TextView
-            android:id="@+id/sector_layout_look_map"
-            android:layout_width="wrap_content"
-            android:layout_height="30sp"
-            android:layout_below="@+id/sector_layout_sector_label"
-            android:layout_marginLeft="100dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="45dp"
-            android:text="@string/look_on_map_upper"
-            android:textColor="@color/text_main"
-            android:textSize="23sp" />
-
-
-        <LinearLayout
-            android:id="@+id/sector_layout_description_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/sector_layout_sector_photo"
-            android:background="@color/text_main"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="@string/description_upper"
-                android:textColor="@color/background"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/sector_layout_description"
+            <ImageView
+                android:id="@+id/sector_layout_sector_photo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/background"
-                android:textSize="15sp" />
+                android:layout_height="260dp" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:text="@string/stones_upper"
-                android:textColor="@color/background"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/sector_layout_sector_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/sector_layout_description_layout"
-            android:scrollbars="vertical" />
-
-        <LinearLayout
-            android:id="@+id/sector_layout_footer_menu"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_below="@+id/sector_layout_sector_container"
-            android:background="@color/grey"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="25sp"
-                android:layout_below="@+id/sector_layout_sector_label"
-                android:layout_marginLeft="70dp"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/look_on_map_upper"
-                android:textColor="@color/background"
+                android:id="@+id/sector_layout_sector_label"
+                android:layout_width="100dp"
+                android:layout_height="30sp"
+                android:layout_marginLeft="74dp"
+                android:layout_marginStart="74dp"
+                android:layout_marginTop="97dp"
+                android:text="@string/sector"
+                android:textColor="@color/text_main"
                 android:textSize="25sp" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/sector_layout_sector_name"
+                android:layout_width="wrap_content"
+                android:layout_height="30sp"
+                android:layout_alignTop="@+id/sector_layout_sector_label"
+                android:layout_toEndOf="@+id/sector_layout_sector_label"
+                android:layout_toRightOf="@+id/sector_layout_sector_label"
+                android:textColor="@color/text_main"
+                android:textSize="23sp" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/sector_layout_look_map"
+                android:layout_width="wrap_content"
+                android:layout_height="30sp"
+                android:layout_below="@+id/sector_layout_sector_label"
+                android:layout_marginLeft="100dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="45dp"
+                android:text="@string/look_on_map_upper"
+                android:textColor="@color/text_main"
+                android:textSize="23sp" />
 
-</ScrollView>
+
+            <LinearLayout
+                android:id="@+id/sector_layout_description_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/sector_layout_sector_photo"
+                android:background="@color/text_main"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="@string/description_upper"
+                    android:textColor="@color/background"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/sector_layout_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/background"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="@string/stones_upper"
+                    android:textColor="@color/background"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/sector_layout_sector_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/sector_layout_description_layout"
+                android:scrollbars="vertical" />
+
+            <LinearLayout
+                android:id="@+id/sector_layout_footer_menu"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_below="@+id/sector_layout_sector_container"
+                android:background="@color/grey"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="25sp"
+                    android:layout_below="@+id/sector_layout_sector_label"
+                    android:layout_marginLeft="70dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="30dp"
+                    android:text="@string/look_on_map_upper"
+                    android:textColor="@color/background"
+                    android:textSize="25sp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+
+    <include
+        android:id="@+id/sector_layout_toolbar"
+        layout="@layout/toolbar" />
+
+</RelativeLayout>
