--- a/TriangularLake/app/src/main/res/layout/sectors_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sectors_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,6 +7,18 @@
     <ListView
         android:id="@+id/sectors_layout_list_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+    <!--<Button-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="40dp"-->
+        <!--android:text="BUTTON"-->
+        <!--android:textColor="@color/text_main"-->
+        <!--android:background="@color/transparent_grey"/>-->
+
+    <include
+        android:id="@+id/sectors_layout_toolbar"
+        layout="@layout/toolbar" />
+
+
+</RelativeLayout>
