--- a/TriangularLake/app/src/main/res/layout/sector_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sector_layout.xml
@@ -95,27 +95,9 @@
                 android:layout_below="@+id/sector_layout_description_layout"
                 android:scrollbars="vertical" />
 
-            <LinearLayout
-                android:id="@+id/sector_layout_footer_menu"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_below="@+id/sector_layout_sector_container"
-                android:background="@color/grey"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="25sp"
-                    android:layout_below="@+id/sector_layout_sector_label"
-                    android:layout_marginLeft="70dp"
-                    android:layout_marginStart="70dp"
-                    android:layout_marginTop="30dp"
-                    android:text="@string/look_on_map_upper"
-                    android:textColor="@color/background"
-                    android:textSize="25sp" />
-
-            </LinearLayout>
+            <include
+                android:id="@+id/sector_layout_buttons_layout"
+                layout="@layout/buttons_layout" />
 
         </RelativeLayout>
     </ScrollView>
