--- a/TriangularLake/app/src/main/res/layout/sectors_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sectors_layout.xml
@@ -9,16 +9,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="40dp"-->
-        <!--android:text="BUTTON"-->
-        <!--android:textColor="@color/text_main"-->
-        <!--android:background="@color/transparent_grey"/>-->
-
     <include
         android:id="@+id/sectors_layout_toolbar"
         layout="@layout/toolbar" />
+
+    <include
+        android:id="@+id/sectors_layout_button_menu"
+        layout="@layout/button_menu"/>
+
+    <include
+        android:id="@+id/sectors_layout_button_map"
+        layout="@layout/button_map"/>
 
 
 </RelativeLayout>
