--- a/TriangularLake/app/src/main/res/layout/activity_screen_slide.xml
+++ b/TriangularLake/app/src/main/res/layout/activity_screen_slide.xml
@@ -1,5 +1,18 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pager"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/test"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:text="TEST"
+        android:textSize="30dp"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/test"/>
+
+</RelativeLayout>
