--- a/TriangularLake/app/src/main/res/layout/fragment_information.xml
+++ b/TriangularLake/app/src/main/res/layout/fragment_information.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/fragment_information_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="INFORMATION FRAGMENT"
         android:textSize="50dp"
         android:textColor="@color/background"/>
 
-</LinearLayout>
+</ScrollView>
