--- a/TriangularLake/app/src/main/res/layout/problems_children_list_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/problems_children_list_layout.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/problems_children_ll_danger"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="@string/danger"
         android:textColor="@color/text_main"/>
 
@@ -17,7 +18,7 @@
         android:id="@+id/problems_children_ll_insurance"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="@string/insurance"
         android:textColor="@color/text_main"/>
 
@@ -25,7 +26,7 @@
         android:id="@+id/problems_children_ll_addition"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:text="@string/addition"
         android:textColor="@color/text_main"/>
 
