--- a/TriangularLake/app/src/main/res/layout/sector_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sector_layout.xml
@@ -7,56 +7,60 @@
     <ScrollView
         android:id="@+id/sector_layout_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/sector_layout_sector_photo"
-                android:layout_width="match_parent"
-                android:layout_height="260dp" />
-
-            <TextView
-                android:id="@+id/sector_layout_sector_label"
-                android:layout_width="100dp"
-                android:layout_height="30sp"
-                android:layout_marginLeft="74dp"
-                android:layout_marginStart="74dp"
-                android:layout_marginTop="97dp"
-                android:text="@string/sector"
-                android:textColor="@color/text_main"
-                android:textSize="25sp" />
-
-            <TextView
-                android:id="@+id/sector_layout_sector_name"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="30sp"
-                android:layout_alignTop="@+id/sector_layout_sector_label"
-                android:layout_toEndOf="@+id/sector_layout_sector_label"
-                android:layout_toRightOf="@+id/sector_layout_sector_label"
-                android:textColor="@color/text_main"
-                android:textSize="23sp" />
+                android:layout_height="260dp">
 
-            <TextView
-                android:id="@+id/sector_layout_look_map"
-                android:layout_width="wrap_content"
-                android:layout_height="30sp"
-                android:layout_below="@+id/sector_layout_sector_label"
-                android:layout_marginLeft="100dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="45dp"
-                android:text="@string/look_on_map_upper"
-                android:textColor="@color/text_main"
-                android:textSize="23sp" />
+                <ImageView
+                    android:id="@+id/sector_layout_sector_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="260dp" />
 
+                <TextView
+                    android:id="@+id/sector_layout_sector_label"
+                    android:layout_width="100dp"
+                    android:layout_height="30sp"
+                    android:layout_marginLeft="74dp"
+                    android:layout_marginStart="74dp"
+                    android:layout_marginTop="97dp"
+                    android:text="@string/sector"
+                    android:textColor="@color/text_main"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:id="@+id/sector_layout_sector_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30sp"
+                    android:layout_alignTop="@+id/sector_layout_sector_label"
+                    android:layout_toEndOf="@+id/sector_layout_sector_label"
+                    android:layout_toRightOf="@+id/sector_layout_sector_label"
+                    android:textColor="@color/text_main"
+                    android:textSize="23sp" />
+
+                <TextView
+                    android:id="@+id/sector_layout_look_map"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30sp"
+                    android:layout_below="@+id/sector_layout_sector_label"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginStart="100dp"
+                    android:layout_marginTop="45dp"
+                    android:text="@string/look_on_map_upper"
+                    android:textColor="@color/text_main"
+                    android:textSize="23sp" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/sector_layout_description_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/sector_layout_sector_photo"
                 android:background="@color/text_main"
                 android:orientation="vertical"
                 android:padding="10dp">
@@ -88,19 +92,16 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/sector_layout_sector_container"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/sector_layout_boulders_recycle_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/sector_layout_description_layout"
-                android:scrollbars="vertical"
-                android:orientation="vertical"/>
+                android:layout_height="wrap_content" />
 
             <include
                 android:id="@+id/sector_layout_buttons_layout"
                 layout="@layout/buttons_layout" />
 
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
     <include
