--- a/TriangularLake/app/src/main/res/layout/problems_parent_list_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/problems_parent_list_layout.xml
@@ -5,22 +5,15 @@
     android:orientation="vertical"
     android:background="@color/background">
 
-    <ImageView
-        android:id="@+id/problems_parent_ll_image_letter"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:id="@+id/problems_parent_ll_problem_name"
         android:layout_width="270dp"
         android:layout_height="30dp"
         android:textColor="@color/text_main"
-        android:layout_alignTop="@id/problems_parent_ll_image_letter"
-        android:layout_toEndOf="@id/problems_parent_ll_image_letter"
-        android:layout_toRightOf="@id/problems_parent_ll_image_letter"  />
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"/>
 
     <ImageView
         android:id="@+id/problems_parent_ll_problem_favorite"
