--- a/TriangularLake/app/src/main/res/layout/sectors_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/sectors_layout.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/sectors_layout_list_view"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sectors_layout_recycler_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <include
