Send to public project

--- a/TriangularLake/app/src/main/res/layout/fragment_side.xml
+++ b/TriangularLake/app/src/main/res/layout/fragment_side.xml
@@ -16,7 +16,7 @@
     <ExpandableListView
         android:id="@+id/fragment_side_exlist_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="5dp"
         android:indicatorLeft="250dp"
         android:indicatorRight="300dp" />
