--- a/TriangularLake/app/src/main/res/layout/side_footer_layout.xml
+++ b/TriangularLake/app/src/main/res/layout/side_footer_layout.xml
@@ -25,24 +25,19 @@
         android:id="@+id/side_footer_layout_button_map"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/side_footer_layout_coordinate"
-        android:layout_marginLeft="20dp"
         android:background="@color/text_main"
         android:text="@string/look_on_map_upper" />
 
-    <ImageButton
+    <Button
         android:id="@+id/side_footer_layout_button_menu"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/side_footer_layout_button_map"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@color/text_main" />
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@color/text_main"
+        android:layout_alignTop="@+id/side_footer_layout_button_map"
+        android:layout_alignRight="@+id/side_footer_layout_coordinate"
+        android:layout_alignEnd="@+id/side_footer_layout_coordinate" />
 
 </RelativeLayout>
